feat(core): add self-detection for shared remote sync config
When remote.url points to the same host:port as the local server,
UDL now detects this and loads plugins instead of syncing from remote.

This allows sharing the same config file between production and local
development - production will source from plugins while local dev
will sync from the remote production server.

Self-detection handles:
- Exact host:port matches
- Local host aliases (localhost, 127.0.0.1, 0.0.0.0)

--- a/docs/content/7.deployment/4.remote-sync.md
+++ b/docs/content/7.deployment/4.remote-sync.md
@@ -129,6 +129,34 @@ When `remote.url` is set, the local server:
 - **Keeps** local GraphQL endpoint active
 - **Keeps** local codegen working (if configured)
 
+### Shared Config Files
+
+You can use the same config file for both production and local development. UDL automatically detects when the remote URL points to itself:
+
+```typescript [udl.config.ts]
+export const config = defineConfig({
+  port: 4000,
+  plugins: ['./plugins/my-source'],
+  remote: {
+    url: 'http://localhost:4000',  // Same as local server
+  },
+});
+```
+
+**On production** (running on port 4000):
+- Detects that `remote.url` points to itself
+- Loads plugins and sources data normally
+- Logs: `📡 Remote URL points to self, loading plugins instead`
+
+**On local dev** (running on different port or machine):
+- Detects that `remote.url` points to a different server
+- Syncs from the remote production server
+- Logs: `📡 Remote mode: syncing from http://localhost:4000`
+
+Self-detection works for:
+- Same host and port (exact match)
+- Local aliases (`localhost`, `127.0.0.1`, `0.0.0.0` are treated as equivalent)
+
 ## Use Cases
 
 ### Local Development with Production Data
