fix(core): use reachability check for remote sync detection
The previous approach compared host:port which didn't work for shared
configs where both production and local dev use the same URL.

New approach: check if the remote server is actually reachable.
- If reachable → sync from remote (we are local dev)
- If not reachable → load plugins (we are production)

This correctly handles:
- Same machine, same port (production starts first)
- Same machine, different ports
- Multi-tenant localhost setups
- Remote production servers

--- a/docs/content/7.deployment/4.remote-sync.md
+++ b/docs/content/7.deployment/4.remote-sync.md
@@ -131,31 +131,48 @@ When `remote.url` is set, the local server:
 
 ### Shared Config Files
 
-You can use the same config file for both production and local development. UDL automatically detects when the remote URL points to itself:
+You can use the same config file for both production and local development. UDL automatically detects which mode to use by checking if the remote server is reachable:
 
 ```typescript [udl.config.ts]
 export const config = defineConfig({
   port: 4000,
   plugins: ['./plugins/my-source'],
   remote: {
-    url: 'http://localhost:4000',  // Same as local server
+    url: 'http://localhost:4000',
   },
 });
 ```
 
-**On production** (running on port 4000):
-- Detects that `remote.url` points to itself
-- Loads plugins and sources data normally
-- Logs: `📡 Remote URL points to self, loading plugins instead`
+**When production starts first:**
 
-**On local dev** (running on different port or machine):
-- Detects that `remote.url` points to a different server
-- Syncs from the remote production server
-- Logs: `📡 Remote mode: syncing from http://localhost:4000`
+```
+Production                           Local Dev (not started yet)
+     │
+     │  Check: Is http://localhost:4000 reachable?
+     │  ❌ No (nothing running yet)
+     │
+     │  Load plugins, source data
+     │  Start server on :4000
+     │
+```
 
-Self-detection works for:
-- Same host and port (exact match)
-- Local aliases (`localhost`, `127.0.0.1`, `0.0.0.0` are treated as equivalent)
+**When local dev starts after:**
+
+```
+Production (running on :4000)        Local Dev
+                                          │
+                                          │  Check: Is http://localhost:4000 reachable?
+                                          │  ✅ Yes (production is running)
+                                          │
+                                          │  Sync from remote instead of loading plugins
+                                          │
+```
+
+This works for any setup:
+- Same machine, same port (production starts first)
+- Same machine, different ports
+- Different machines (local dev connects to remote production)
+- Multi-tenant setups on localhost
 
 ## Use Cases
 
