refactor: move cache storage from .udl-cache to .udl/cache
Restructure cache directory to use `.udl/` as a parent directory for
all internal UDL files. This allows future expansion for storing other
library internals (logs, state, etc.) while keeping a single directory
to gitignore.

- Update FileCacheStorage to use .udl/cache/nodes.json
- Update FileSyncTokenStorage to use .udl/cache/contentful-sync-tokens.json
- Update all gitignore, prettierignore, and eslint ignore patterns
- Update documentation to reflect new paths
- Update all related tests

--- a/docs/content/6.reference/1.configuration.md
+++ b/docs/content/6.reference/1.configuration.md
@@ -194,7 +194,7 @@ Control node caching behavior:
 
 | Value | Behavior |
 | ----- | -------- |
-| `undefined` (default) | File-based cache in `.udl-cache/nodes.json` |
+| `undefined` (default) | File-based cache in `.udl/cache/nodes.json` |
 | `false` | Disable caching entirely |
 | `CacheStorage` | Custom cache implementation |
 
